@startuml

skinparam monochrome true
hide empty members

namespace Backend {

interface Backend
class BackendImpl
Backend <|.. BackendImpl

interface Storage
interface Person
interface ResumeGenerator
interface ResumeSaver

BackendImpl *-- "1" Storage
BackendImpl *-- "1" Person
BackendImpl *-- "1" ResumeGenerator
BackendImpl *-- "1" ResumeSaver

}

@enduml